fixed bg of qr not showing issue

--- a/css/root.css
+++ b/css/root.css
@@ -9,4 +9,5 @@
   --color-light: #f2f5f9;
   --color-light-muted: #bed7ff;
   --color-vibrant: #3662e3;
+  --color-vibrant-muted: #1E2C51;
 }
